--- a/npm/dependencies/package.json
+++ b/npm/dependencies/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "moment": "^2.20.1"
+  },
+  "devDependencies": {
+    "jasmine-node": "^1.14.5"
   }
 }
