node-todo - Setting up user ans password for MongoDB.

--- a/final-app/docker/mongo/Dockerfile
+++ b/final-app/docker/mongo/Dockerfile
@@ -1,3 +1,6 @@
 FROM mongo:latest
 
 MAINTAINER David Cuellar, davidokun99@gmail.com
+
+ENV MONGO_INITDB_ROOT_USERNAME=test
+ENV MONGO_INITDB_ROOT_PASSWORD=test
